crates/apollo-compiler/test_data/diagnostics/0109_null_in_list_issue_738.txt
Error: expected value of type String!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:12:16]
    │
  6 │   foo(arg: [String!]!): String!
    │            ─────┬────  
    │                 ╰────── field declared here as String! type
    │ 
 12 │   a: foo(arg: [null])
    │                ──┬─  
    │                  ╰─── argument declared here is of Null type
────╯
Error: expected value of type String!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:13:16]
    │
  6 │   foo(arg: [String!]!): String!
    │            ─────┬────  
    │                 ╰────── field declared here as String! type
    │ 
 13 │   b: foo(arg: [null, null, "hello"])
    │                ──┬─  
    │                  ╰─── argument declared here is of Null type
────╯
Error: expected value of type String!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:13:22]
    │
  6 │   foo(arg: [String!]!): String!
    │            ─────┬────  
    │                 ╰────── field declared here as String! type
    │ 
 13 │   b: foo(arg: [null, null, "hello"])
    │                      ──┬─  
    │                        ╰─── argument declared here is of Null type
────╯
Error: expected value of type String!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:14:13]
    │
  7 │   bar(arg: [String!]): String!
    │            ────┬────  
    │                ╰────── field declared here as String! type
    │ 
 14 │   bar(arg: [null])
    │             ──┬─  
    │               ╰─── argument declared here is of Null type
────╯
Error: expected value of type String!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:15:27]
    │
  2 │   list: [String!]
    │         ────┬────  
    │             ╰────── field declared here as String! type
    │ 
 15 │   list(arg: {list: ["ok", null]})
    │                           ──┬─  
    │                             ╰─── argument declared here is of Null type
────╯

